# pure-rust-lightgbm

./: .gitignore  CLAUDE.md  CMakeLists.txt  COMPREHENSIVE_RUST_LIGHTGBM_TREELEARNER_FLOWCHART.md  CONTRIBUTING.md  Cargo.toml  DENSE_BIN_PORTING_REPORT.md  E2E_TEST_RESULTS_ANALYSIS.md  EQUIVALENCE_TEST_REPORT.md  EQUIVALENCE_VERIFICATION_REPORT.md  FLOWCHART_ALIGNMENT_COMPLETION_REPORT.md  FLOWCHART_ALIGNMENT_SUMMARY.md  FLOWCHART_COMPARISON_ANALYSIS.md  GITHUB_ISSUES.md  GITHUB_ISSUES_CREATED.md  LIGHTGBM-FLOW-CHART-page1.md  LIGHTGBM-FLOW-CHART-page2.md  LIGHTGBM_TREELEARNER_FLOWCHART.md  MULTI_VAL_SPARSE_BIN_PORT_REPORT.md  PREDICTION_DISCREPANCY_ANALYSIS.md  README.md  RESOLVED_ISSUES.md  RUST_LIGHTGBM_TREELEARNER_FLOWCHART.md  binary_classification_comparison.py  cpp_equivalence_results.txt  cpp_results_u16_u8.txt  cpp_results_u32_u16.txt  cpp_results_u32_u8.txt  cpp_test_case_2.txt  cpp_test_case_4.txt  create_fixed_test_data  create_fixed_test_data.cpp  debug_csv_test.rs  debug_hessian_test.py  debug_split_finding.rs  equivalence_test  equivalence_test.rs  final_precision_report.py  fixed_test_data.txt  formula.md  (+49 more)
.claude/: CLAUDE.md
.claude/commands/: code-check.md
.github/: pull_request_template.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
LightGBM/: bin.h
LightGBM/utils/: common.h  openmp_wrapper.h  threading.h
examples/: advanced_features.rs  basic_training.rs  comprehensive_testing.rs  direct_comparison.rs  test_data_generator.rs  test_gbdt_training.rs
examples/python-lightgbm/: comparison_test.py  hello.py  pyproject.toml  test_gbdt_training.py
src/: boosting.rs  ensemble.rs  hyperopt.rs  lib.rs  metrics_eval.rs  prediction.rs  prediction_backup.rs
src/boosting/: early_stopping.rs  ensemble.rs  mod.rs
src/config/: core.rs  device.rs  mod.rs  objective.rs  validation.rs
src/core/: bin.rs  config.rs  constants.rs  dataset.rs  error.rs  feature_group.rs  memory.rs  meta.rs  mod.rs  network.rs  prediction_early_stop.rs  sample_strategy.rs  train_share_states.rs  traits.rs  tree_learner.rs  types.rs
src/core/gpu/: cuda_random.rs  mod.rs  random.rs  vector_cudahost.rs
src/core/utils/: array_args.rs  binary_writer.rs  byte_buffer.rs  common.rs  file_io.rs  json11.rs  log.rs  mod.rs  openmp_wrapper.rs  random.rs  threading.rs
src/dataset/: dataset copy.rs  dataset.rs  mod.rs  partition.rs
src/dataset/binning/: categorical.rs  mapper.rs  mod.rs  numerical.rs
src/dataset/loader/: arrow.rs  csv.rs  loader.rs  mod.rs  parquet.rs  polars.rs
src/dataset/preprocessing/: missing.rs  mod.rs
src/io/: bin.rs  dataset.rs  dense_bin.rs  format.rs  mod.rs  model_file.rs  multi_val_dense_bin.rs  multi_val_sparse_bin.rs  sparse_bin.rs  train_share_states.rs  tree.rs
src/io/serialization/: bincode.rs  json.rs  lightgbm.rs  mod.rs
src/metrics/: classification.rs  mod.rs  ranking.rs  regression.rs
src/prediction/: early_stopping.rs  feature_importance.rs  leaf_index.rs  mod.rs  prediction_early_stop.rs  predictor.rs  shap.rs
src/tree/: mod.rs  node.rs  sampling.rs  tree.rs
src/tree/histogram/: builder.rs  mod.rs  pool.rs  simd.rs
src/tree/learner/: feature_parallel.rs  mod.rs  parallel.rs  serial.rs
src/tree/split/: constraints.rs  evaluator.rs  finder.rs  mod.rs
src/treelearner/: col_sampler.rs  data_partition.rs  leaf_splits.rs  mod.rs  split_info.rs
src/utils/: mod.rs  openmp_wrapper.rs
tests/: advanced_integration.rs  classification.rs  comprehensive_e2e_tests.rs  data_pipeline.rs  dataset.rs  end_to_end.rs  integration.rs  model_validation.rs  performance_benchmarks.rs  regression.rs  test_dataset_equivalence.rs  test_datasets.rs  test_dense_bin.rs  test_feature_group_equivalence.rs  test_json11_equivalence.rs  test_multi_val_dense_bin.rs  test_rust_cpp_equivalence.rs  test_sparse_bin_equivalence.rs  test_threading_equivalence.rs  test_tree_equivalence.rs  workflow_validation.rs
tests/common/: mod.rs
